...
                    showMachineList = true
                } label: {
                    Label("Find Computers", systemImage: "desktopcomputer")
                        .frame(maxWidth: 200)
                }
                .buttonStyle(.borderedProminent)
                .accessibilityIdentifier("DisconnectedQuickConnectButton")
                
                Button {
                    showConnectionList = true
                } label: {
                    Label("Manual Setup", systemImage: "slider.horizontal.3")
                        .frame(maxWidth: 200)
                }
                .buttonStyle(.bordered)
                .accessibilityIdentifier("DisconnectedSavedConnectionsButton")
            }
        }
        .padding()
        .frame(maxWidth: .infinity, maxHeight: .infinity)
        .background(backgroundColor)
    }
...
